# SnakeKinolowy

./: CMakeLists.txt  CMakeLists.txt~  README.md  README.txt  Untitled Diagram.xml  main.cpp  wonszyk.pdn
app/: build.gradle
app/src/androidTest/java/com/example/user/snake/: ApplicationTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/user/snake/: BoardImage.java  Box.java  BundleNames.java  Direction.java  GameFragment.java  GameView.java  InputHandler.java  LoginActivity.java  MainActivity.java  MidiPlayer.java  Notification.java  Painter.java  Point.java  ResultsAdapter.java  ResultsDialogFragment.java  Snake.java  SnakeMessage.java  Steering.java  User.java
app/src/main/java/com/example/user/snake/assets/: Assets.java  BundleNames.java
app/src/main/java/com/example/user/snake/communication/: Direction.java  Notification.java  Point.java  Score.java  ScoreMessage.java  Snake.java  SnakeMessage.java  User.java
app/src/main/java/com/example/user/snake/communication/Answers/: Board.java  Notification.java  Point.java  Score.java  ScoreMessage.java  SendingTask.java  Snake.java  SnakeMessage.java  User.java
app/src/main/java/com/example/user/snake/communication/Queries/: JsonMessage.java  LogOut.java  Reset.java  Results.java  Steering.java  Username.java
app/src/main/java/com/example/user/snake/graphics/: Assets.java  Box.java  ButtonBox.java  GameView.java  InputHandler.java  MidiPlayer.java  Painter.java
app/src/main/java/com/example/user/snake/main/: GameFragment.java  LoginActivity.java  MainActivity.java  ResultsAdapter.java  ResultsDialogFragment.java  SplashActivity.java
app/src/main/java/com/example/user/snake/names/: BundleNames.java
app/src/main/java/com/example/user/snake/states/: DeathState.java  EndGameState.java  GameState.java  PauseState.java  PlayState.java  WaitingState.java
app/src/main/java/com/example/user/snake/user_interface/: Box.java  GameView.java  InputHandler.java  Painter.java
app/src/main/res/drawable/: laser_button_custom.xml  pressed_laser_button.xml  splash_screen.xml
app/src/main/res/layout/: activity_main.xml  game_layout.xml  login_layout.xml  results_dialog.xml  results_row.xml
app/src/main/res/layout-land/: activity_main.xml  game_layout.xml  login_layout.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
app/src/main/res/values-w820dp/: dimens.xml
app/src/test/java/com/example/user/snake/: ExampleUnitTest.java
include/: lobby.hpp  main_server.hpp  messagetypes.hpp  player_info.hpp  settings.hpp
service/include/: Map.h  Player.h  Point.h  Process.h  Server.h  Settings.h  messagetypes.h  stdafx.h
service/src/: Map.cpp  Player.cpp  Process.cpp  Server.cpp  Settings.cpp
src/: lobby.cpp  main_server.cpp  messagetypes.cpp  player_info.cpp  settings.cpp
